js/js.translator/testData/incremental/invalidation/privateInlineFunction1/lib2/l2.kt
inline fun qux(x: Int, y: Int) = foo(x, y)
